--- a/internal/server/template/layouts/index.html.tmpl
+++ b/internal/server/template/layouts/index.html.tmpl
@@ -1,6 +1,7 @@
-<html>
+<html class="w-full h-full">
     {{ template "head" . }}
-    <body>
+    <link rel="stylesheet" href="assets/dist/main.css" />
+    <body class="bg-gray-100 w-full h-full p-3">
         {{ template "form" . }}
     </body>
 </html>
