chore: use english in templates

--- a/internal/server/template/blocks/form.html.tmpl
+++ b/internal/server/template/blocks/form.html.tmpl
@@ -11,7 +11,7 @@
                     <input
                         class="bg-green-600 text-white my-4 px-4 py-2 rounded-md text-xl font-medium hover:bg-green-700 transition duration-300" 
                         type="submit" 
-                        name="submit" value="Enregistrer" />
+                        name="submit" value="Save" />
                 </td>
             </tr>
         </tbody>
