--- a/internal/server/template/blocks/form_input_array.html.tmpl
+++ b/internal/server/template/blocks/form_input_array.html.tmpl
@@ -18,7 +18,7 @@
                         <input type="submit"
                             class="bg-red-600 text-white mb-2 px-3 py-1 rounded-md text-sm font-medium hover:bg-red-700 transition duration-300" 
                             name="del:{{ $fullProperty }}/{{$index}}" 
-                            value="Supprimer" />
+                            value="Remove" />
                         <hr />
                     </td>
                 </tr>
@@ -30,7 +30,7 @@
                         class="bg-blue-500 text-white mb-2 mt-2 px-3 py-1 rounded-md text-sm font-medium hover:bg-blue-700 transition duration-300"
                         type="submit" 
                         name="add:{{ $fullProperty }}/-" 
-                        value="Ajouter" />
+                        value="Add" />
                 </td>
             </tr>
         </tbody>
