--- a/internal/server/template/blocks/form_input_number.html.tmpl
+++ b/internal/server/template/blocks/form_input_number.html.tmpl
@@ -1,6 +1,6 @@
 {{define "form_input_number"}}
 {{ $fullProperty := getFullProperty .Parent .Property }}
-{{ $value := getValue .Defaults .Values $fullProperty }}
+{{ $value := getValue .Values $fullProperty }}
 <input type="number" 
     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
     name="num:{{ $fullProperty }}"
